--- a/res/drawable/item_bg.xml
+++ b/res/drawable/item_bg.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
     <item android:drawable="@color/yellow" android:state_pressed="true"></item>
+    <item android:drawable="@color/blue" android:state_selected="true"></item>
     <item android:drawable="@color/red_light"></item>
 </selector>
